--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
+    
     "start": "react-scripts start",
+    "start:staging": "env-cmd -f .env.staging react-scripts start",
+    "start:production": "env-cmd -f .env.production react-scripts start",
+    "start:deployment": "env-cmd -f .env.deployment react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
