--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "start:production": "env-cmd -f .env.production react-scripts start",
     "start:deployment": "env-cmd -f .env.deployment react-scripts start",
     "build": "react-scripts build",
+    "build:staging": "env-cmd -f .env.staging react-scripts build",
+    "build:deployment":"env-cmd -f .env.deployment react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
